# nyc_taxi_fare_mlops_pipeline

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml  train.yml
.streamlit/: config.toml
api/: main.py
dashboard/: app.py
docker/: api.Dockerfile  dashboard.Dockerfile  mlflow.Dockerfile  training.Dockerfile
models/: metadata.json  model.joblib  scaler.joblib
monitoring/: drift.py  prometheus.yml
monitoring/grafana/dashboards/: api_monitoring.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
pipelines/: __init__.py  batch_inference_pipeline.py  training_pipeline.py
scripts/: train_and_export.py
src/: __init__.py  config.py
src/features/: engineer.py
src/inference/: __init__.py  demo_model.py  predict.py  trained_model.py
src/ingestion/: ingest.py  storage.py
src/training/: evaluate.py  train.py
src/validation/: validate.py
tests/: conftest.py  test_api.py  test_features.py  test_validation.py
